<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Migrate</string>
    <string name="app_intro">Data backup and migrate assistant</string>
    <string name="card_intro">Click card to expand the menu</string>
    <string name="fab_intro_list">Click this button to return to the overview page</string>
    <string name="fab_intro_category_backup">Click this button to start backup</string>
    <string name="fab_intro_category_restore">Click this button to start restore</string>
    <string name="fab_intro_category_received">Click this button to start import</string>
    <string name="fab_intro_category_send">Click this button to start sending</string>
    <string name="backup_intro_actions">This card contains</string>
    <string name="backup_intro_and">and</string>
    <string name="backup_intro">支持联系人，短信，通话记录，多媒体，无线局域网等数据备份与应用（数据）的本地备份。\n\n需要你授予联系人，电话，短信，文件读写等权限。</string>
    <string name="transport_intro">你现在可以在两台设备之间，快速互相传输文件。\n\n需要你授予位置信息权限。\n</string>
    <string name="ftp_intro">文件传输协议FTP使得主机间可以共享文件。FTP客户机可以给服务器发出命令来下载文件，上传文件，创建或改变服务器上的目录。\n\n需要你授予文件读写权限，并确保连接到了无线网络。\n\n相关技术来自@Pieter的Swiftp项目。</string>
    <string name="title_activity_navigator">@string/app_name</string>
    <string name="yes">Y</string>
    <string name="no">N</string>
    <string name="title_need_help">Need help？</string>
    <string name="transport_event_description_init">初始化</string>
    <string name="transport_event_description_insert">插入数据库</string>
    <string name="transport_event_description_create_dir">创建文件夹</string>
    <string name="transport_event_description_copy_file">复制文件</string>
    <string name="transport_event_description_copy_apk">复制APK</string>
    <string name="transport_event_description_copy_data">复制应用数据</string>
    <string name="transport_event_description_install_apk">安装应用</string>
    <string name="transport_event_description_install_apk_wait_for_res">等待安装结果</string>
    <string name="transport_event_description_install_data">安装数据</string>
    <string name="transport_event_description_wait_for_def_sms_app">等待设置为默认短信应用</string>
    <string name="transport_event_description_install_extra_data">安装附加数据</string>
    <string name="transport_event_description_token_divider">&#160;</string>
    <string name="permission_request">需要权限</string>
    <string name="permission_request_message">我们需要你授予文件读写权限来保证应用的基本运作。请在接下来的请求对话框选择允许。</string>
    <string name="permission_missing">权限缺失</string>
    <string name="permission_missing_message">看起来我们无法请求一些权限，你可以继续使用，但可能会因此导致一些功能异常</string>
    <string name="action_settings">设置</string>
    <string name="action_user_actions">日志</string>
    <string name="action_disable_selinux">禁用SeLinux</string>
    <string name="action_remove">删除</string>
    <string name="action_rename">修改备注</string>
    <string name="action_compress">压缩(实验)</string>
    <string name="action_details">系统信息</string>
    <string name="action_backup_event">备份记录</string>
    <string name="action_compressed">压缩完成</string>
    <string name="action_compressing">正在进行压缩，文件较多，请耐心等待</string>
    <string name="action_compress_background">后台</string>
    <string name="action_compressed_how_to_use">如何使用？</string>
    <string name="message_compressed_how_to_use">压缩包里包含了此备份的完整数据，使用时需要将其解压到 [%1$s] 文件夹下即可被识别为一次备份～</string>
    <string name="action_renamed_to">已经修改名称为 %1$s</string>
    <string name="action_compressed_to">压缩文件已经保存到[%1$s]路径下</string>
    <string name="action_compress_fail">无法对该文件夹进行压缩</string>
    <string name="action_rename_fail">无法修改名称</string>
    <string name="action_select_all">全部选择</string>
    <string name="action_clear_selection">清除选择</string>
    <string name="title_need_selection">请先选择要处理的数据</string>
    <string name="title_removed">已经删除：%1$s</string>
    <string name="title_remove_failed">无法删除：%1$s</string>
    <string name="title_remove_z">撤销</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_category_viewer">CategoryViewerActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="category_mm">多媒体</string>
    <string name="category_private">私有数据</string>
    <string name="category_advanced">高级与实验性</string>
    <string name="category_music">音乐</string>
    <string name="category_video">视频</string>
    <string name="category_contact">联系人</string>
    <string name="category_sms">短信</string>
    <string name="category_photo">照片</string>
    <string name="category_app">应用</string>
    <string name="category_system_app">系统应用(实验)</string>
    <string name="category_alarm">闹钟</string>
    <string name="category_wifi">WLAN</string>
    <string name="category_call">通话记录</string>
    <string name="category_custom">自定义文件</string>
    <string name="category_system_settings">系统设置(实验)</string>
    <string name="title_transport_stats">状态与统计</string>
    <string name="title_transport_stats_success">成功项</string>
    <string name="title_transport_stats_fail">失败项</string>
    <string name="title_apk">安装包</string>
    <string name="title_data">数据</string>
    <string name="title_data_apk">下列全部</string>
    <string name="details_images_path">文件路径：%1$s</string>
    <string name="summary_sms_template_rec">来自&#160;%1$s \t%2$s</string>
    <string name="summary_sms_template_send">发给&#160;%1$s \t%2$s</string>
    <string name="summary_sms_template_draft">草稿&#160;%1$s \t%2$s</string>
    <string name="title_transport_report">报告：</string>
    <string name="title_transport_report_total">共计：%1$s条</string>
    <string name="title_transport_report_success">成功：%1$s条</string>
    <string name="title_transport_report_fail">失败：%1$s条</string>
    <string name="title_transport_intro">点击可以查看详细日志</string>
    <string name="title_setup_wfd">寻找连接</string>
    <string name="title_setup_wfd_sender">寻找连接-发送</string>
    <string name="title_setup_wfd_receiver">寻找连接-接收</string>
    <string name="title_setup_wfd_note">注意：</string>
    <string name="title_restart_connector"><b><i>点此重新初始化连接器</i></b></string>
    <string name="summary_setup_wfd_note_name">*\t\t你的设备昵称为&#160;</string>
    <string name="summary_setup_wfd_note_item">*\t\t可用设备会出现在上面列表中</string>
    <string name="summary_setup_wfd_note_click">*\t\t点击你想连接的设备即可进行连接并传输</string>
    <string name="summary_setup_wfd_note_restart">*\t\t如果经过了很长时间仍然没有结果，你可以&#160;</string>
    <string name="title_wfd_conn_fail">连接失败</string>
    <string name="summary_wfd_conn_fail">当前无法与该设备建立连接，请稍候再试</string>
    <string name="summary_wfd_conn">正在连接</string>
    <string name="summary_wfd_requesting_conn_info">尝试获取连接信息</string>
    <string name="summary_wfd_requesting_conn_res">等待反馈</string>
    <string name="title_set_device_id">你的设备昵称</string>
    <string name="title_err_wfd_device_not_support">看起来你的设备不支持WIFI-DIRECT技术，请尝试手动打开Wifi~~</string>
    <string name="title_err_wfd_device_not_support_action">再试试</string>
    <string name="title_err_wfd_device_not_found">未搜索到任何可用设备</string>
    <string name="title_err_wfd_device_not_found_action">再试试</string>
    <string name="title_category">类别</string>
    <string name="title_more">更多</string>
    <string name="title_others">其他</string>
    <string name="title_backup_restore">备份与恢复</string>
    <string name="title_backup">开始备份</string>
    <string name="title_backup_export">导出数据</string>
    <string name="title_backup_exporting">正在导出数据</string>
    <string name="title_backup_export_complete">导出数据完成</string>
    <string name="title_restore">查看本地备份</string>
    <string name="title_restore_picker">选择数据</string>
    <string name="title_restore_import">导入数据</string>
    <string name="title_restore_importing">正在导入数据</string>
    <string name="title_restore_import_complete">导入数据完成</string>
    <string name="action_done">完成</string>
    <string name="action_log">查看日志</string>
    <string name="action_log_with_other_app">在其他应用打开</string>
    <string name="action_preparing">正在准备…</string>
    <string name="action_remark_backup">此次备份的备注为：%1$s, 你稍后可以在本地备份中进行查看或修改。</string>
    <string name="action_remark_received">此次接收记录的备注为：%1$s, 你稍后可以在接收记录中进行查看或修改。</string>
    <string name="action_remark_tips">，点击可进行修改。</string>
    <string name="action_viewer_tips_received">你稍后可以在 主页-卡片-我接收到的文件 里查看或者导入你的设备。</string>
    <string name="title_backup_at">%1$s</string>
    <string name="title_backup_at_invalid_date">无法</string>
    <string name="title_backup_default_name">我的备份</string>
    <string name="title_received_default_name">我收到的</string>
    <string name="title_backup_invalid">无效备份</string>
    <string name="title_backup_history">最近备份 %1$s</string>
    <string name="title_backup_history_noop">无备份记录</string>
    <string name="title_receive_history_noop">无接收记录</string>
    <string name="title_receive_history_size">有%1$s条接收记录</string>
    <string name="title_only_root_dir">目前只支持根目录文件</string>
    <string name="title_restore_sending">正在发送数据</string>
    <string name="title_restore_sending_complete">数据发送完毕</string>
    <string name="title_restore_receiving">正在接收数据</string>
    <string name="title_restore_receiving_complete">数据接收完毕</string>
    <string name="summary_category_viewer">%1$s/%2$s</string>
    <string name="summary_category_viewer_need_click">点击选择条目</string>
    <string name="summary_app_template_short">版本号: %1$s\n文件大小: %2$s</string>
    <string name="summary_app_template">版本号: %1$s\n文件大小: %2$s\n\n将会备份安装包: %3$s\n将会备份数据包: %4$s</string>
    <string name="summary_app_template2">版本号: %1$s\n文件大小: %2$s\n\n包含安装包: %3$s\n包含数据包: %4$s\n包含附加数据包: %5$s\n\n将会还原安装包: %6$s\n将会还原数据包: %7$s</string>
    <string name="unknown">未知</string>
    <string name="enforcing">执行中</string>
    <string name="permissive">许可</string>
    <string name="empty_title">天哪</string>
    <string name="empty_summary">没有找到任何内容，你可以去【指定加载数据类型】查看是否关闭了某些数据类型的加载，再来尝试。</string>
    <string name="oc_storage_android">需要空间：%1$s</string>
    <string name="oc_storage_backup">占用空间：%1$s</string>
    <string name="tile_category_storage">存储</string>
    <string name="tile_category_view">视觉（实验）</string>
    <string name="tile_category_about">关于</string>
    <string name="tile_category_in">反馈与支持</string>
    <string name="tile_category_strategy">策略</string>
    <string name="tile_category_dev">高级</string>
    <string name="tile_category_app">应用备份</string>
    <string name="tile_title_auto_connect">自动连接</string>
    <string name="tile_transition_animation">过场动画</string>
    <string name="summary_transition_animation">开启更活泼的动画</string>
    <string name="tile_theme_color">主色</string>
    <string name="tips_theme_color">更改主题也会更改应用图标，请等待应用被重新启用</string>
    <string name="title_launcher_icon">更改应用图标</string>
    <string name="tile_work_mode_root">备份/还原应用数据(实验)</string>
    <string name="summary_work_mode_root">为具有root权限的设备备份/还原应用数据，稍后将会检查并申请root权限，请在收到申请提示后，选择允许。还原之前注意要先关闭正在运行的相关应用，否则可能造成应用的数据丢失</string>
    <string name="tile_dev_mode">调试模式</string>
    <string name="summary_dev_mode">你可以查看程序日志，开启一些调试功能，也可能会引入一些未知问题，仅限开发者调试使用</string>
    <string name="tile_auto_install">静默安装</string>
    <string name="tile_install_timeout">应用安装超时</string>
    <string name="summery_install_timeout">当应用安装时间超过%1$s毫秒时，认为该应用安装失败，通常是因为用户在安装界面选择了取消。</string>
    <string name="summaty_auto_install">尝试静默安装应用程序，需要你的设备拥有root权限，并且允许给本应用；如果静默安装失败，会尝试传统安装方式安装。</string>
    <string name="title_encrypt">加密(实验)</string>
    <string name="summary_encrypt">对通话记录，短信进行加密。注意，这可能会导致备份的数据失去兼容性</string>
    <string name="title_transport_sender_receiver">无线快传</string>
    <string name="title_transport_sender">发送数据给对方</string>
    <string name="title_transport_receiver">从对方接收数据</string>
    <string name="title_transport_received_viewer">查看接收到的数据记录</string>
    <string name="title_transport_share">把[数据迁移]分享给别人</string>
    <string name="title_transport_share_tips">为了安全起见，Android禁止直接分享APK文件，因此我们把APK文件命名为JPEG文件，待对方收到该文件后，修改后缀名为APK即可安装使用</string>
    <string name="title_ftp">FTP文件服务</string>
</resources>