<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_backup_restore"
            android:icon="@drawable/ic_backup_restore"
            android:title="@string/title_backup_restore" />
        <item
            android:id="@+id/nav_sender_receiver"
            android:icon="@drawable/ic_transport"
            android:title="@string/title_transport_sender_receiver" />
    </group>

    <item android:title="@string/title_others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />

            <item
                android:id="@+id/nav_in"
                android:icon="@drawable/ic_forum"
                android:title="@string/tile_category_in" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/tile_category_about" />
        </menu>
    </item>

</menu>
