<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_rename"
        android:orderInCategory="100"
        android:title="@string/action_rename"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:title="@string/action_remove"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_compress"
        android:orderInCategory="100"
        android:title="@string/action_compress"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sys_details"
        android:orderInCategory="100"
        android:title="@string/action_details"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_backup_event"
        android:orderInCategory="100"
        android:title="@string/action_backup_event"
        app:showAsAction="ifRoom" />
</menu>
