<?xml version="1.0" encoding="utf-8"?>
<com.vlonjatg.progressactivity.ProgressRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/progressLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:emptyBackgroundColor="@color/white"
    app:emptyTitleTextSize="@dimen/text_size_large"
    app:errorBackgroundColor="@color/white"
    app:loadingBackgroundColor="@color/white">


    <android.support.v7.widget.CardView
        android:id="@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin_small"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:padding="2dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:contentPadding="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@android:id/title"
                style="@style/ListItemMainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/title_setup_wfd_note"
                android:textAllCaps="true" />

            <TextView
                android:id="@android:id/text1"
                style="@style/ListItemSecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@android:id/title"
                android:layout_alignStart="@android:id/title"
                android:layout_below="@android:id/title"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:linksClickable="true" />

            <Button
                android:id="@android:id/button1"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@android:id/text1"
                android:text="@string/title_restart_connector"
                android:visibility="gone" />

            <Button
                android:id="@android:id/button2"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@android:id/text1"
                android:layout_toLeftOf="@android:id/button1"
                android:text="@string/title_restore"
                android:visibility="gone" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/card_1"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</com.vlonjatg.progressactivity.ProgressRelativeLayout>