<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:padding="2dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:contentPadding="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <org.newstand.datamigration.ui.widget.ProgressWheel
                android:id="@+id/progress_view"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:pwBarColor="@color/dark"
                app:pwBarLength="6dp"
                app:pwBarWidth="8dp"
                app:pwRimColor="@color/divider"
                app:pwRimWidth="1dp"
                app:pwSpinSpeed="3dp"
                app:pwTextColor="@color/dark"
                app:pwTextSize="36sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/console_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:padding="2dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:contentPadding="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@android:id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary_text"
                android:textStyle="normal" />

            <TextView
                android:id="@android:id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@android:id/title"
                android:layout_alignStart="@android:id/title"
                android:layout_below="@android:id/title"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:lineSpacingMultiplier="1.2"
                android:padding="@dimen/text_padding_medium"
                android:text="@string/action_preparing"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/secondary_text" />

            <Button
                android:id="@+id/log"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@android:id/text1"
                android:layout_toLeftOf="@+id/button"
                android:text="@string/action_log" />

            <Button
                android:id="@+id/button"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@android:id/text1"
                android:text="@string/action_done" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>